# c-codebase

./: .clangd  CMakeLists.txt  README.md  build-linux.sh  build.zig  ccs.sh
c-codebase/src/base/: defines.h
c-codebase/src/container/: defines.h  string.h
c-codebase/src/core/: event.c  event.h  logger.c
c-codebase/src/math/: math.c  matrix.h  quaternion.h  transform.c  vector.h
c-codebase/src/memory/: arena.c
c-codebase/src/os/: os.c
c-codebase/src/renderer/: renderer.c
c-codebase/src/window/: window.c  window.h
ccb/src/ccb/base/: defines.h
ccb/src/ccb/container/: defines.h  string.c  string.h
ccb/src/ccb/core/: entity.h  event.c  event.h  input.c  input.h  logger.c  logger.h  uuid.c  uuid.h
ccb/src/ccb/debug/: debug.c  debug.h
ccb/src/ccb/math/: math.c  math.h  matrix.h  quaternion.h  transform.c  transform.h  types.h  vector.h
ccb/src/ccb/memory/: arena.c  arena.h
ccb/src/ccb/os/: os.c  os.h
ccb/src/ccb/platform/: platform.c  platform.h
ccb/src/ccb/renderer/: camera.c  camera.h  opengl.c  opengl.h  renderer.c  renderer.h  types.h
ccb/src/ccb/scene/: scene.c  scene.h
ccb/src/ccb/window/: window.c  window.h
core/src/core/: core.c  core.h
core/src/core/debug/: debug.c  memory.c  profiler.c
core/src/core/event/: event.c
core/src/core/input/: input.c
core/src/core/logger/: logger.c
core/src/core/memory/: arena.c
core/src/core/scene/: scene.c
core/src/core/window/: window.c
example/src/: example.c
forge/: CMakeLists.txt
forge/src/forge/: forge_api.h
forge/src/forge/asset/: asset.c  asset.h
forge/src/forge/container/: string8.c  vector2.c  vector3.c  vector4.c
forge/src/forge/graphics/: graphics.c  window.h
forge/src/forge/input/: input.c
forge/src/forge/logger/: logger.c
forge/src/forge/math/: math.c  math.h
forge/src/forge/memory/: arena.c  memory.h
forge/src/forge/platform/: platform.h
sandbox/src/: main.c
sandbox/src/sandbox/: main.c
src/: forge.c  forge.h  forge_asset.c  forge_asset.h  forge_asset_internal.c  forge_audio.c  forge_audio.h  forge_base_types.h  forge_gfx.c  forge_gfx.h  forge_input.c  forge_input.h  forge_log.c  forge_log.h  forge_math.c  forge_math.h  forge_memory_arena.c  forge_memory_arena.h  forge_platform_types.h  forge_string.c  forge_string.h  forge_vector2.c  forge_vector2.h  forge_vector3.c  forge_vector3.h  forge_vector4.c  forge_vector4.h  forge_window.c  forge_window.h
src/base/: defines.h
src/container/: defines.h  string.c  string.h  vector.c  vector.h
src/core/: entity.h  event.h  input.c  input.h  logger.h  uuid.c  uuid.h
src/debug/: debug.c  debug.h
src/forge/: forge.c  forge.h  forge_api.h
src/forge/asset/: asset.c  asset.h
src/forge/audio/: audio.c  audio.h
src/forge/base/: base.h
src/forge/container/: string.h  string8.c  vector.h  vector2.c  vector3.c  vector4.c
src/forge/graphics/: graphics.c  graphics.h  window.c  window.h  window_internal.c
src/forge/input/: input.c  input.h  input_internal.c
src/forge/logger/: logger.c  logger.h
src/forge/math/: math.c  math.h
src/forge/memory/: arena.c  memory.h
src/forge/platform/: platform.h
src/math/: math.c  math.h  transform.c  transform.h  types.h
src/memory/: arena.h
src/os/: os.c  os.h
src/renderer/: camera.c  camera.h  renderer.h
src/scene/: scene.c  scene.h
src/window/: window.c  window.h
test/src/: main.c
test/src/test/: main.c  window.c
tests/: CMakeLists.txt
tests/src/: test_lib.c
